# UnBlocks-gen

./: .gitignore  codeLog.txt  readLog.md  test.ipynb
examples/: readLog.md
examples/ArtBnd/: TwoBlock.py
examples/DIYBlock/: DIYBlock.dda  DIYBlock.py  DIYBlockCut.py  DIYBlockMulti.dda  DIYBlockMulti.py  DIYBlockMultiStatic.dda  DIYBlockMultiStaticVV.dda  DataSaveGeo_BlkCut_1.dda  DataSaveGeo_BlkCut_1.vtk  DataSaveGeo_BlkCut_11.dda  DataSaveGeo_BlkCut_11.vtk  DataSaveGeo_BlkCut_4.dda  DataSaveGeo_BlkCut_4.vtk  DataSaveGeo_simp1.dda  DataSaveGeo_simp1ve.dda  DataSaveGeo_simp2.dda  DataSaveGeo_simp2cee.dda  DataSaveGeo_simp2ve.dda  DataSaveGeo_simp2vf.dda  DataSaveGeo_simp2vfl.dda  DataSaveGeo_simp2vfvv.dda  DataSaveGeo_simp2vv.dda  DataSaveGeo_simp_juxtap.dda  DataSaveGeo_simp_juxtap1.dda  DataSaveGeo_simp_juxtap1_3.dda  MultiStaticVE.dda
examples/Kumamoto/: DIYCut.py  GenGranular-Small.py  GenGranular.py  GenPolyhedra.py  GenSoil-Small.py  GenSoil.py  generateBlock.py  generateBlock1.py  granular-small.poly  granular.poly  soil-small.poly  soil.poly
examples/SelfDesigned/: LargePenetration.py  OneMillionFall.py  SmallAngle.py  SmallEdge.py  Tetrahedron.py  generateBlock.py  test.py
examples/Simple Rock Mass/: Block0.vtk  Block1.vtk  Block10.vtk  Block11.vtk  Block12.vtk  Block2.vtk  Block3.vtk  Block4.vtk  Block5.vtk  Block6.vtk  Block7.vtk  Block8.vtk  Block9.vtk  dfnCreated.vtk  modelRegion.vtk  (+3 more)
src/: CMakeLists.txt  Wrapper.cpp
src/Eigen/: Cholesky.c  Eigenvalues.c  Geometry.c  Householder.c  Jacobi.c  LU.c  QR.c  SVD.c
src/dfn/: DFN.cpp  DFN.hpp  Fracture.cpp  Fracture.hpp  FractureSet.cpp  FractureSet.hpp  Mapping.cpp  Mapping.hpp
src/generator/: Block.cpp  Block.hpp  Generator.cpp  Generator.hpp
src/maths/: Assert.hpp  EigenTypes.hpp  Functions.cpp  Functions.hpp  Geometry.cpp  Geometry.hpp  Math.hpp  TolControl.hpp
(+48 files in other folders)
